--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,10 +1,67 @@
 body {
+    background-color: rgb(223, 231, 250);
+    font-family: sans-serif;
 }
 
 h1 {
     text-align: center;
+    font-family: sans-serif;
+    font-size: 36px;
+}
+h2 {
+    margin: 0 0 5px;
+
+}
+
+select {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border-radius: 6px;
+    font-size: 16px;
+}
+
+.container {
+    max-width: 600px;
+    margin: 0 auto;
+    background-color: white;
+    padding: 30px;
+    box-shadow: 10px 5px 5px rgba(116, 114, 114, 0.2);
+    border-radius: 10px;
+
+}
+
+
+
+.city {
+    display: flex;
+    justify-content: space-between;
+    margin: 20px 0;
+    font-size: 20px;
+    padding:20px 0;
+    border-bottom: 1px dashed rgba(0, 0, 0, 0.2);
+}
+
+.city:last-child {
+    border: none;
+}
+
+.date {
+    opacity: 0.6;
+}
+
+.time {
+    font-size: 36px;
+}
+
+.time small {
+    font-size: 18px;
+    vertical-align: middle;
 }
 
 footer {
     text-align: center;
+    margin-top: 15px;
+    font-size: 18px;
+    color: rgba(0, 0, 0, 0.6);
 }
