--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,7 +23,7 @@ select {
 
 .container {
     max-width: 600px;
-    margin: 0 auto;
+    margin: 50px auto;
     background-color: white;
     padding: 30px;
     box-shadow: 10px 5px 5px rgba(116, 114, 114, 0.2);
@@ -57,6 +57,7 @@ select {
 .time small {
     font-size: 18px;
     vertical-align: middle;
+    
 }
 
 footer {
